--- a/index.html
+++ b/index.html
@@ -22,87 +22,248 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body class="bg-dark-blue-main">
-  Features
-  Team
-  Sign In
+<body class="bg-dark-blue-main text-white">
+  <header>
+    <img src="images/logo.svg" alt="logo">
+    <nav>
+      <ul>
+        <li>
+          <a href="#">
+            Features
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Team
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            Sign
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-  All your files in one secure location, accessible anywhere.
+  <main>
+    <section>
+      <img src="images/illustration-intro.png" alt="two people getting files">
+      <h1>
+        All your files in one secure location, accessible anywhere.
+      </h1>
+      <p>
+        Fylo stores all your most important files in one secure location. Access them wherever 
+        you need, share and collaborate with friends family, and co-workers.
+      </p>
+      <button>
+        Get Started
+      </button>
+    </section>
 
-  Fylo stores all your most important files in one secure location. Access them wherever 
-  you need, share and collaborate with friends family, and co-workers.
+    <section>
+      <div>
+        <img src="images/icon-access-anywhere.svg" alt="computer and phone image">
+        <h2>
+          Access your files, anywhere
+        </h2>
+        <p>
+          The ability to use a smartphone, tablet, or computer to access your account means your 
+          files follow you everywhere.
+        </p>
+      </div>
 
-  Get Started
+      <div>
+        <img src="images/icon-security.svg" alt="shield image">
+        <h2>
+          Security you can trust
+        </h2>
+        <p>
+          2-factor authentication and user-controlled encryption are just a couple of the security 
+          features we allow to help secure your files.
+        </p>
+      </div>
 
-  Access your files, anywhere
+      <div>
+        <img src="images/icon-collaboration.svg" alt="clock icon with three people">
+        <h2>
+          Real-time collaboration
+        </h2>
+        <p>
+          Securely share files and folders with friends, family and colleagues for live collaboration. 
+          No email attachments required.
+        </p>
+      </div>
 
-  The ability to use a smartphone, tablet, or computer to access your account means your 
-  files follow you everywhere.
+      <div>
+        <img src="images/icon-any-file.svg" alt="folder icon">
+        <h2>
+          Store any type of file
+        </h2>
+        <p>
+          Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
+          file types to be securely stored and shared.
+        </p>
+      </div>
+    </section>
 
-  Security you can trust
+    <section>
+      <img src="images/illustration-stay-productive.png" alt="three people holding message icons">
+      <div>
+        <h2>
+          Stay productive, wherever you are
+        </h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
+          storage needs.
+        </p>
+        <p>
+          Securely share files and folders with friends, family and colleagues for live collaboration. No email 
+          attachments required.
+        </p>
+        <a href="#">
+          See how Fylo works
+        </a>
+      </div>
+    </section>
 
-  2-factor authentication and user-controlled encryption are just a couple of the security 
-  features we allow to help secure your files.
+    <section>
+      <div>
+        <p>
+          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.
+        </p>
+        <div>
+          <img src="images/profile-1.jpg" alt="profile picture">
+          <div>
+            <p>
+              Satish Patel
+            </p>
+            <p>
+              Founder & CEO, Huddle
+            </p>
+          </div>
+        </div>
+      </div>
 
-  Real-time collaboration
+      <div>
+        <p>
+          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.
+        </p>
+        <div>
+          <img src="images/profile-2.jpg" alt="profile picture">
+          <div>
+            <p>
+              Bruce McKenzie              
+            </p>
+            <p>
+              Founder & CEO, Huddle
+            </p>
+          </div>
+        </div>
+      </div>
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. 
-  No email attachments required.
+      <div>
+        <p>
+          Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+          become a well-oiled collaboration machine.
+        </p>
+        <div>
+          <img src="images/profile-3.jpg" alt="profile picture">
+          <div>
+            <p>
+              Iva Boyd
+            </p>
+            <p>
+              Founder & CEO, Huddle
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  Store any type of file
+    <section>
+      <h2>
+        Get early access today
+      </h2>
+      <p>
+        It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+        questions, our support team would be happy to help you.
+      </p>
+      <div>
+        <input type="email" placeholder="email@example.com">
+        <button>
+          Get Started For Free
+        </button>
+      </div>
+    </section>
 
-  Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all 
-  file types to be securely stored and shared.
+    <div>
+      <img src="images/logo.svg" alt="logo">
 
-  Stay productive, wherever you are
+      <div>
+        <img src="images/icon-location.svg" alt="location icon">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+          dolore magna aliqua
+        </p>
+      </div>
 
-  Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
-  storage needs.
+      <div>
+        <img src="images/icon-phone.svg" alt="phone icon">
+        <p>
+          +1-543-123-4567
+        </p>
+      </div>
+      <div>
+        <img src="images/icon-email.svg" alt="email icon">
+        <p>
+          example@fylo.com
+        </p>
+      </div>
 
-  Securely share files and folders with friends, family and colleagues for live collaboration. No email 
-  attachments required.
 
-  See how Fylo works
+      <div>
+        <div>
+          <p>
+            About Us
+          </p>
+          <p>
+            Jobs
+          </p>
+          <p>
+            Press
+          </p>
+          <p>
+            Blog  
+          </p>
+        </div>
+        <div>
+          <p>
+            Contact Us
+          </p>
+          <p>
+            Terms
+          </p>
+          <p>
+            Privacy
+          </p>
+        </div>
+      </div>
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
+      <div>
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+      </div>
 
-  Satish Patel
-  Founder & CEO, Huddle
+    </div>
+  </main>
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
 
-  Bruce McKenzie
-  Founder & CEO, Huddle
 
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
 
-  Iva Boyd
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
 
   <footer>
     <p class="attribution">
