--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </style>
 </head>
 <body class="bg-dark-blue-intro text-white">
-  <header class="p-8 flex items-center justify-between mb-10">
-    <img class="w-28" src="images/logo.svg" alt="logo">
+  <header class="p-8 flex items-center justify-between mb-10 md:p-16">
+    <img class="w-28 md:w-40" src="images/logo.svg" alt="logo">
     <nav>
       <ul class="flex gap-4">
         <li>
@@ -47,22 +47,22 @@
   </header>
 
   <main>
-    <section class="px-8 bg-[url('../images/bg-curvy-mobile.svg')] bg-contain bg-no-repeat bg-bottom">
-      <img src="images/illustration-intro.png" alt="two people getting files">
-      <h1 class="text-center font-bold text-2xl mt-10">
+    <section class="px-8 md:px-16 bg-[url('../images/bg-curvy-mobile.svg')] bg-contain bg-no-repeat bg-bottom">
+      <img class="mx-auto" src="images/illustration-intro.png" alt="two people getting files">
+      <h1 class="text-center font-bold text-2xl md:text-3xl mt-10 mx-auto sm:w-4/5 lg:text-4xl">
         All your files in one secure location, accessible anywhere.
       </h1>
-      <p class="text-center mt-8">
+      <p class="text-center mt-8 mx-auto sm:w-4/5 lg:w-1/2">
         Fylo stores all your most important files in one secure location. Access them wherever 
         you need, share and collaborate with friends family, and co-workers.
       </p>
-      <button class="bg-cyan rounded-full py-3 px-14 mt-10 mx-auto block">
+      <button class="bg-cyan rounded-full py-3 px-14 mt-10 mx-auto block md:px-20">
         Get Started
       </button>
     </section>
 
-    <section class="bg-dark-blue-main pt-40 flex flex-col gap-20 px-9">
-      <div>
+    <section class="bg-dark-blue-main pt-40 flex flex-col gap-20 px-9 md:grid md:grid-cols-2 md:justify-items-center md:gap-0">
+      <div class="md:max-w-[326px]">
         <img class="mx-auto mb-10" src="images/icon-access-anywhere.svg" alt="computer and phone image">
         <h2 class="text-center text-xl font-bold mb-2">
           Access your files, anywhere
@@ -73,8 +73,8 @@
         </p>
       </div>
 
-      <div>
-        <img class="mx-auto mb-10" src="images/icon-security.svg" alt="shield image">
+      <div class="md:max-w-[326px]">
+        <img class="mx-auto mb-10 md:mb-7" src="images/icon-security.svg" alt="shield image">
         <h2 class="text-center text-xl font-bold mb-2">
           Security you can trust
         </h2>
@@ -84,7 +84,7 @@
         </p>
       </div>
 
-      <div>
+      <div class="md:max-w-[326px]">
         <img class="mx-auto mb-10" src="images/icon-collaboration.svg" alt="clock icon with three people">
         <h2 class="text-center text-xl font-bold mb-2">
           Real-time collaboration
@@ -95,7 +95,7 @@
         </p>
       </div>
 
-      <div>
+      <div class="md:max-w-[326px]">
         <img class="mx-auto mb-10" src="images/icon-any-file.svg" alt="folder icon">
         <h2 class="text-center text-xl font-bold mb-2">
           Store any type of file
@@ -107,22 +107,22 @@
       </div>
     </section>
 
-    <section class="px-9 bg-dark-blue-main pt-40">
-      <img src="images/illustration-stay-productive.png" alt="three people holding message icons">
-      <div class="flex flex-col gap-3">
-        <h2 class="text-lg font-bold">
+    <section class="px-9 bg-dark-blue-main pt-40 lg:flex lg:gap-10">
+      <img class="lg:w-7/12 mx-auto" src="images/illustration-stay-productive.png" alt="three people holding message icons">
+      <div class="flex flex-col gap-3 mt-20 lg:w-5/12">
+        <h2 class="text-lg font-bold sm:text-xl md:text-2xl lg:text-3xl">
           Stay productive, wherever you are
         </h2>
-        <p class="text-sm">
+        <p class="text-sm md:text-base">
           Never let location be an issue when accessing your files. Fylo has you covered for all of your file 
           storage needs.
         </p>
-        <p class="text-sm">
+        <p class="text-sm md:text-base">
           Securely share files and folders with friends, family and colleagues for live collaboration. No email 
           attachments required.
         </p>
         <div class="flex gap-1 items-center border-b border-cyan w-max py-1">
-          <a class="text-sm text-cyan" href="#">
+          <a class="text-sm text-cyan md:text-base" href="#">
             See how Fylo works
           </a>
           <img src="images/icon-arrow.svg" alt="arrow icon">
@@ -130,7 +130,7 @@
       </div>
     </section>
 
-    <section class="bg-dark-blue-main pt-40 px-10 pb-80 font-open-sans relative column flex flex-col gap-10">
+    <section class="bg-dark-blue-main pt-40 px-10 pb-80 font-open-sans relative column flex flex-col gap-10 md:grid md:grid-cols-2 lg:grid-cols-3">
       <img class="absolute top-32 z-0 w-10 left-14" src="images/bg-quotes.png" alt="qoute icon">
       <div class="bg-dark-blue-testimonial rounded-lg text-[10px] p-8 z-10 relative shadow-[0px_0px_10px_hsl(219,30%,18%)] ">
         <p>
@@ -188,17 +188,17 @@
     </section>
 
     <section class="bg-dark-blue-main px-10 relative">
-      <div class="bg-dark-blue-intro p-7 rounded-2xl shadow-[0px_0px_10px_rgba(0,0,0,0.2)] absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-80">
-        <h2 class="text-center text-xl font-bold mb-4">
+      <div class="bg-dark-blue-intro p-7 rounded-2xl shadow-[0px_0px_10px_rgba(0,0,0,0.2)] absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-5/6 sm:w-2/3 lg:px-20">
+        <h2 class="text-center text-xl font-bold mb-4 md:text-2xl lg:text-3xl">
           Get early access today
         </h2>
         <p class="text-center text-sm">
           It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
           questions, our support team would be happy to help you.
         </p>
-        <div class="mt-8">
-          <input class="w-full p-3 rounded-full px-10 mb-8" type="email" placeholder="email@example.com">
-          <button class="bg-cyan rounded-full py-3 px-14 w-full">
+        <div class="mt-8 md:flex md:items-center md:gap-4">
+          <input class="w-full p-3 rounded-full px-10 mb-8 md:mb-0" type="email" placeholder="email@example.com">
+          <button class="bg-cyan rounded-full py-3 px-14 w-full md:px-8 md:whitespace-nowrap md:w-max">
             Get Started For Free
           </button>
         </div>
@@ -209,70 +209,74 @@
   </main>
 
   <footer class="bg-dark-blue-footer pt-60 px-10">
-     <div class="flex flex-col gap-20">
+     <div class="flex flex-col gap-20 mb-20">
       <img class="w-40" src="images/logo.svg" alt="logo">
-
-      <div class="flex flex-col gap-4">
-        <div class="flex items-start gap-4">
-          <img class="mt-1" src="images/icon-location.svg" alt="location icon">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-            dolore magna aliqua
-          </p>
+      
+      <div class="flex flex-col gap-20 lg:flex-row">
+        <div class="flex flex-col gap-4 md:flex-row md:justify-between md:gap-20 lg:gap-20">
+          <div class="flex items-start gap-4 md:w-1/2">
+            <img class="mt-1" src="images/icon-location.svg" alt="location icon">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+              dolore magna aliqua
+            </p>
+          </div>
+          <div class="space-y-4 md:w-1/2">
+            <div class="flex items-center gap-4">
+              <img src="images/icon-phone.svg" alt="phone icon">
+              <p>
+                +1-543-123-4567
+              </p>
+            </div>
+            <div class="flex items-center gap-4">
+              <img src="images/icon-email.svg" alt="email icon">
+              <p>
+                example@fylo.com
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="flex items-center gap-4">
-          <img src="images/icon-phone.svg" alt="phone icon">
-          <p>
-            +1-543-123-4567
-          </p>
+  
+  
+        <div class="flex flex-col gap-10 sm:flex-row sm:justify-between sm:gap-20">
+          <div class="space-y-5 sm:w-1/2">
+            <p class="whitespace-nowrap">
+              About Us
+            </p>
+            <p>
+              Jobs
+            </p>
+            <p>
+              Press
+            </p>
+            <p>
+              Blog  
+            </p>
+          </div>
+          <div class="space-y-5 sm:w-1/2">
+            <p class="whitespace-nowrap">
+              Contact Us
+            </p>
+            <p>
+              Terms
+            </p>
+            <p>
+              Privacy
+            </p>
+          </div>
         </div>
-        <div class="flex items-center gap-4">
-          <img src="images/icon-email.svg" alt="email icon">
-          <p>
-            example@fylo.com
-          </p>
+  
+        <div class="flex items-center gap-4 justify-center">
+          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
+            <i class="fab fa-facebook-f"></i>
+          </figure>
+          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
+            <i class="fab fa-twitter"></i>
+          </figure>
+          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
+            <i class="fab fa-instagram"></i>
+          </figure>
         </div>
-      </div>
-
-
-      <div class="flex flex-col gap-10">
-        <div class="space-y-5">
-          <p>
-            About Us
-          </p>
-          <p>
-            Jobs
-          </p>
-          <p>
-            Press
-          </p>
-          <p>
-            Blog  
-          </p>
-        </div>
-        <div class="space-y-5">
-          <p>
-            Contact Us
-          </p>
-          <p>
-            Terms
-          </p>
-          <p>
-            Privacy
-          </p>
-        </div>
-      </div>
-
-      <div class="flex items-center gap-4 justify-center mb-20">
-        <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
-          <i class="fab fa-facebook-f"></i>
-        </figure>
-        <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
-          <i class="fab fa-twitter"></i>
-        </figure>
-        <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
-          <i class="fab fa-instagram"></i>
-        </figure>
       </div>
 
     </div>
