Adjust gap-y of the grid in the second section element

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </button>
     </section>
 
-    <section class="bg-dark-blue-main pt-40 flex flex-col gap-20 px-9 md:grid md:grid-cols-2 md:justify-items-center md:gap-0">
+    <section class="bg-dark-blue-main pt-40 flex flex-col gap-20 px-9 md:grid md:grid-cols-2 md:justify-items-center md:gap-0 md:gap-y-10">
       <div class="md:max-w-[326px]">
         <img class="mx-auto mb-10" src="images/icon-access-anywhere.svg" alt="computer and phone image">
         <h2 class="text-center text-xl font-bold mb-2">
