--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
   <header class="p-8 flex items-center justify-between mb-10 md:p-16">
     <img class="w-28 md:w-40" src="images/logo.svg" alt="logo">
     <nav>
-      <ul class="flex gap-4">
-        <li>
-          <a href="#">
+      <ul class="flex">
+        <li class="w-24">
+          <a class="hover:font-bold block text-center hover:underline" href="#">
             Features
           </a>
         </li>
-        <li>
-          <a href="#">
+        <li class="w-24">
+          <a class="hover:font-bold block text-center hover:underline" href="#">
             Team
           </a>
         </li>
-        <li>
-          <a href="#">
+        <li class="w-24">
+          <a class="hover:font-bold block text-center hover:underline" href="#">
             Sign
           </a>
         </li>
@@ -56,7 +56,7 @@
         Fylo stores all your most important files in one secure location. Access them wherever 
         you need, share and collaborate with friends family, and co-workers.
       </p>
-      <button class="bg-cyan rounded-full py-3 px-14 mt-10 mx-auto block md:px-20">
+      <button class="hover:bg-cyan bg-blue rounded-full py-3 px-14 mt-10 mx-auto block md:px-20">
         Get Started
       </button>
     </section>
@@ -121,11 +121,11 @@
           Securely share files and folders with friends, family and colleagues for live collaboration. No email 
           attachments required.
         </p>
-        <div class="flex gap-1 items-center border-b border-cyan w-max py-1">
-          <a class="text-sm text-cyan md:text-base" href="#">
+        <div class="flex gap-1 items-center border-b border-cyan w-max py-1 hover:border-white group">
+          <a class="text-sm text-cyan group-hover:text-white md:text-base" href="#">
             See how Fylo works
           </a>
-          <img src="images/icon-arrow.svg" alt="arrow icon">
+          <svg class="text-cyan group-hover:text-white" width="16" height="16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><circle id="b" cx="6" cy="6" r="6"/><filter x="-25%" y="-25%" width="150%" height="150%" filterUnits="objectBoundingBox" id="a"><feOffset in="SourceAlpha" result="shadowOffsetOuter1"/><feGaussianBlur stdDeviation="1" in="shadowOffsetOuter1" result="shadowBlurOuter1"/><feColorMatrix values="0 0 0 0 0.384313725 0 0 0 0 0.878431373 0 0 0 0 0.850980392 0 0 0 0.811141304 0" in="shadowBlurOuter1"/></filter></defs><g fill="none" fill-rule="evenodd"><g transform="translate(2 2)"><use fill="#000" filter="url(#a)" xlink:href="#b"/><use fill="currentColor" xlink:href="#b"/></g><path d="M8.582 6l-.363.35 1.452 1.4H5.333v.5h4.338L8.22 9.65l.363.35 2.074-2z" fill="#1B2330"/></g></svg>
         </div>
       </div>
     </section>
@@ -196,12 +196,16 @@
           It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
           questions, our support team would be happy to help you.
         </p>
-        <div class="mt-8 md:flex md:items-center md:gap-4">
-          <input class="w-full p-3 rounded-full px-10 mb-8 md:mb-0" type="email" placeholder="email@example.com">
-          <button class="bg-cyan rounded-full py-3 px-14 w-full md:px-8 md:whitespace-nowrap md:w-max">
+        <!-- TODO: Add email validation in JS file -->
+        <form id="email-form" novalidate class="mt-8 md:flex md:items-center md:gap-4 relative">
+          <input class="w-full text-dark-blue-main focus:outline-none p-3 rounded-full px-10 mb-8 md:mb-0" type="email" id="email" placeholder="email@example.com">
+          <p id="error-msg" class=" text-light-red-error hidden text-sm absolute top-12 left-10">
+            Please enter a valid email address
+          </p>
+          <button class="hover:bg-cyan bg-blue rounded-full py-3 px-14 w-full md:px-8 md:whitespace-nowrap md:w-max" type="submit">
             Get Started For Free
           </button>
-        </div>
+        </form>
       </div>
     </section>
 
@@ -285,5 +289,7 @@
       Coded by <a href="#">Vince Cedie Pino</a>.
     </p>
   </footer>
+
+  <script src="js/index.js"></script>
 </body>
 </html>
