add active styles for footer elements

--- a/index.html
+++ b/index.html
@@ -242,43 +242,43 @@
         </div>
   
   
-        <div class="flex flex-col gap-10 sm:flex-row sm:justify-between sm:gap-20">
-          <div class="space-y-5 sm:w-1/2">
-            <p class="whitespace-nowrap">
+        <div class="flex flex-col gap-10 sm:flex-row sm:justify-between sm:gap-20 lg:max-w-[223px]">
+          <div class="space-y-5 sm:w-1/2 sm:max-w-max lg:max-w-[66px]">
+            <p class="whitespace-nowrap hover:font-bold">
               About Us
             </p>
-            <p>
+            <p class="hover:font-bold">
               Jobs
             </p>
-            <p>
+            <p class="hover:font-bold">
               Press
             </p>
-            <p>
+            <p class="hover:font-bold">
               Blog  
             </p>
           </div>
-          <div class="space-y-5 sm:w-1/2">
-            <p class="whitespace-nowrap">
+          <div class="space-y-5 sm:w-1/2 lg:max-w-[66px]">
+            <p class="whitespace-nowrap hover:font-bold">
               Contact Us
             </p>
-            <p>
+            <p class="hover:font-bold">
               Terms
             </p>
-            <p>
+            <p class="hover:font-bold">
               Privacy
             </p>
           </div>
         </div>
   
         <div class="flex items-center gap-4 justify-center">
-          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
-            <i class="fab fa-facebook-f"></i>
+          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center hover:border-cyan group">
+            <i class="fab fa-facebook-f group-hover:text-cyan"></i>
           </figure>
-          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
-            <i class="fab fa-twitter"></i>
+          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center hover:border-cyan group">
+            <i class="fab fa-twitter group-hover:text-cyan"></i>
           </figure>
-          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center">
-            <i class="fab fa-instagram"></i>
+          <figure class="w-10 h-10 rounded-full border border-white flex items-center justify-center hover:border-cyan group">
+            <i class="fab fa-instagram group-hover:text-cyan"></i>
           </figure>
         </div>
       </div>
